# BetterThanYou

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.ko.md  README.md  README.zh.md  package.json  pnpm-lock.yaml  run.sh
.agents/skills/better-than-you-battle/: SKILL.md
.agents/skills/better-than-you-battle/agents/: openai.yaml
.agents/skills/mcp-server-patterns/agents/: openai.yaml
.cargo/: config.toml
.codex/: AGENTS.md  config.toml
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
.github/workflows/: ci.yml  release-rust.yml
Formula/: better-than-you.rb
apps/web/: package.json
apps/web/src/: server.js
apps/web/test/: server.test.js
infra/cloudflare/: README.md  package-lock.json  package.json  wrangler.toml
infra/cloudflare/src/: worker.ts
scripts/: better-than-you-cmux-drop  build-check.js  clean-cache.sh
src/: lib.rs  main.rs  ui.rs
test/support/: portrait-fixture.js
