[package]
name = "better-than-you"
version = "0.3.0"
edition = "2021"
description = "CLI-first portrait battle tool for fictional AI-generated adult portraits"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
font8x8 = "0.3"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.16"
