[package]
name = "better-than-you"
version = "0.8.0"
edition = "2021"
description = "CLI-first portrait battle tool for fictional AI-generated adult portraits"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
font8x8 = "0.3"
urlencoding = "2.1"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
qrcode = { version = "0.14", default-features = false }
local-ip-address = "0.6"
tiny_http = "0.12"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.16"

# Smaller release binaries. ~16 MB → ~10 MB on macOS arm64.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
incremental = false
